--- a/desktop-themes/Blue-Undersea/ctk-3.0/ctk.css
+++ b/desktop-themes/Blue-Undersea/ctk-3.0/ctk.css
@@ -285,7 +285,7 @@
 @define-color overshoot_bg_color alpha (@theme_selected_bg_color, 0.55);
 @define-color overshoot_backdrop_bg_color #96C8FA;
 
-/* inactive-pane caja */
+/* inactive-pane baul */
 @define-color inactive-pane_bg_color #E5E5E5;
 
 @import url("ctk-widgets.css");
