--- a/desktop-themes/BlackCAFE/ctk-3.0/ctk-main.css
+++ b/desktop-themes/BlackCAFE/ctk-3.0/ctk-main.css
@@ -172,7 +172,7 @@
 @define-color overshoot_bg_color alpha (@theme_selected_bg_color, 0.35);
 @define-color overshoot_backdrop_bg_color #F57900;
 
-/* inactive-pane caja */
+/* inactive-pane baul */
 @define-color inactive-pane_bg_color #606060;
 
 @import url("ctk-widgets.css");
