--- a/desktop-themes/GreenLagoon/ctk-3.0/ctk-widgets.css
+++ b/desktop-themes/GreenLagoon/ctk-3.0/ctk-widgets.css
@@ -464,7 +464,7 @@ iconview.view:hover:focus {
     border-color: alpha(@theme_selected_bg_color, 0.35);
 }
 
-/* ie. caja bg properties left side button area */
+/* ie. baul bg properties left side button area */
 viewport {
     background-color: shade(@theme_bg_color, 1.00);
     border-radius: 0px;
@@ -1050,7 +1050,7 @@ notebook header tab .active-page label {
     color: @theme_fg_color;
 }
 
-/* notebooks, view, header and tabs in caja and lapiz view */
+/* notebooks, view, header and tabs in baul and lapiz view */
 paned.horizontal notebook {
     border-style: none;
     border-color: @notebook_border;
@@ -1308,7 +1308,7 @@ notebook tab.reorderable-page:checked {
     border-style: solid;
 }
 
- /* ie. caja properties-window notes tab */
+ /* ie. baul properties-window notes tab */
 dialog notebook.frame > stack > scrolledwindow.frame {
      border-style: none;
 }
