--- a/desktop-themes/Mint/gtk-3.0/cafe-applications.css
+++ b/desktop-themes/Mint/gtk-3.0/cafe-applications.css
@@ -3,29 +3,29 @@
  *********************/
 
 /* Caja places combobox */
-.caja-navigation-window .caja-side-pane button.flat {
+.baul-navigation-window .baul-side-pane button.flat {
     background-color: transparent;
     background-image: linear-gradient(to bottom,
                                       @button_gradient_color_a,
                                       @button_gradient_color_b);
 }
 
-.caja-navigation-window .caja-side-pane button.flat:hover {
+.baul-navigation-window .baul-side-pane button.flat:hover {
     background-color: transparent;
     background-image: linear-gradient(to bottom,
                                       @button_hover_gradient_color_a,
                                       @button_hover_gradient_color_b);
 }
 
-.caja-navigation-window .caja-side-pane button.flat:backdrop {
+.baul-navigation-window .baul-side-pane button.flat:backdrop {
     background-color: transparent;
     background-image: linear-gradient(to bottom, 
                                       @button_gradient_backdrop_color_a,
                                       @button_gradient_backdrop_color_b);
 }
 
-.caja-navigation-window .caja-side-pane button.flat:first-child,
-.caja-navigation-window .caja-side-pane button.flat:hover:first-child {
+.baul-navigation-window .baul-side-pane button.flat:first-child,
+.baul-navigation-window .baul-side-pane button.flat:hover:first-child {
     border-image: url("borders/button.png") 3 4 4 4 / 3px 4px 4px 4px stretch;
     border-radius: 3px 0 0 3px;
     /* remove right border */
@@ -34,7 +34,7 @@
 	box-shadow: inset -1px 0 @inset_dark_color;
 }
 
-.caja-navigation-window .caja-side-pane button.flat:focus:first-child {
+.baul-navigation-window .baul-side-pane button.flat:focus:first-child {
     border-image: url("borders/button-focus.png") 3 4 4 4 / 3px 4px 4px 4px stretch;
     border-radius: 3px 0 0 3px;
     /* remove right border */
@@ -44,8 +44,8 @@
     outline-style: none;
 }
 
-.caja-navigation-window .caja-side-pane button.flat:last-child,
-.caja-navigation-window .caja-side-pane button.flat:hover:last-child {
+.baul-navigation-window .baul-side-pane button.flat:last-child,
+.baul-navigation-window .baul-side-pane button.flat:hover:last-child {
     border-image: url("borders/button.png") 3 4 4 4 / 3px 4px 4px 4px stretch;
     border-radius: 0 3px 3px 0;
     /* remove left border */
@@ -54,7 +54,7 @@
 	box-shadow: inset 1px 0 @inset_light_color;
 }
 
-.caja-navigation-window .caja-side-pane button.flat:focus:last-child {
+.baul-navigation-window .baul-side-pane button.flat:focus:last-child {
     border-image: url("borders/button-focus.png") 3 4 4 4 / 3px 4px 4px 4px stretch;
     border-radius: 0 3px 3px 0;
     /* remove left border */
@@ -65,29 +65,29 @@
 }
 
 /* ComboBox views */
-.caja-navigation-window toolbar.primary-toolbar combobox > button.combo {
+.baul-navigation-window toolbar.primary-toolbar combobox > button.combo {
     padding: 6px 4px;
 }
 
 /* pathpar toggle button */
-.caja-navigation-window button.toggle.image-button,
-.caja-navigation-window button.toggle.image-button:checked {
+.baul-navigation-window button.toggle.image-button,
+.baul-navigation-window button.toggle.image-button:checked {
     padding: 5px;
     border-radius: 3px;
 }
 
 /* pathbar */
 /* pathbar buttons */
-.caja-pathbar button {
+.baul-pathbar button {
     padding: 4px;
 }
 
 /* arrow button */
-.caja-pathbar button.slider-button:focus {
+.baul-pathbar button.slider-button:focus {
 	border-image: url("borders/button.png") 3 4 4 4 / 3px 4px 4px 4px stretch;
 }
 
-.caja-pathbar button.slider-button:nth-child(odd) {
+.baul-pathbar button.slider-button:nth-child(odd) {
     border-radius: 3px 0px 0px 3px;
     /* remove right border */
     border-width: 2px 0px 2px 2px;
@@ -96,7 +96,7 @@
 	box-shadow: inset -1px 0 @inset_dark_color;
 }
 
-.caja-pathbar button.slider-button:nth-child(even) {
+.baul-pathbar button.slider-button:nth-child(even) {
     border-radius: 0 3px 3px 0;
     /* remove left border */
     border-width: 2px 2px 2px 0px;
@@ -106,13 +106,13 @@
 }
 
 /* remove box shadow from last-child */
-.caja-pathbar button.slider-button:disabled:nth-child(even) {
+.baul-pathbar button.slider-button:disabled:nth-child(even) {
 	box-shadow: none;
 }
 
 /* folder buttons */
-.caja-pathbar button.toggle.text-button,
-.caja-pathbar button.toggle.text-button.image-button {
+.baul-pathbar button.toggle.text-button,
+.baul-pathbar button.toggle.text-button.image-button {
     border-width: 2px 0px;
 	border-image-width: 3px 0 4px 0;
 	border-radius: 0;
@@ -120,89 +120,89 @@
 	box-shadow: inset 1px 0 @inset_light_color, inset -1px 0 @inset_dark_color;
 }
 
-.caja-pathbar button.toggle.text-button:checked,
-.caja-pathbar button.toggle.text-button.image-button:checked {
+.baul-pathbar button.toggle.text-button:checked,
+.baul-pathbar button.toggle.text-button.image-button:checked {
 	box-shadow: inset 1px 0 @inset_dark_color;
 }
 
-.caja-pathbar button.toggle.text-button:disabled,
-.caja-pathbar button.toggle.text-button.image-button:disabled {
+.baul-pathbar button.toggle.text-button:disabled,
+.baul-pathbar button.toggle.text-button.image-button:disabled {
 	box-shadow: inset -1px 0 @inset_dark_color;
 }
 
 /* places, treeview, history, information, emblems and notes */
-.caja-side-pane notebook treeview.view,
-.caja-side-pane notebook textview.view text,
-.caja-side-pane notebook viewport.frame,
-.caja-side-pane notebook widget .vertical {
+.baul-side-pane notebook treeview.view,
+.baul-side-pane notebook textview.view text,
+.baul-side-pane notebook viewport.frame,
+.baul-side-pane notebook widget .vertical {
     background-color: shade (@theme_bg_color, 1.08);
     color: @theme_fg_color;
 }
 
-.caja-side-pane treeview.view:selected,
-.caja-side-pane treeview.view:selected:hover {
+.baul-side-pane treeview.view:selected,
+.baul-side-pane treeview.view:selected:hover {
     background-color: shade (@theme_selected_bg_color, 1.00);
     color: shade (@theme_selected_fg_color, 1.00);
 }
 
-.caja-side-pane treeview.view:hover {
+.baul-side-pane treeview.view:hover {
     background-color: shade (@theme_selected_bg_color, 1.15);
     color: shade (@theme_selected_fg_color, 1.00);
 }
 
 /* unfocused window */
-.caja-side-pane notebook treeview.view:backdrop,
-.caja-side-pane notebook textview.view text:backdrop,
-.caja-side-pane notebook viewport.frame:backdrop,
-.caja-side-pane notebook widget .vertical:backdrop {
+.baul-side-pane notebook treeview.view:backdrop,
+.baul-side-pane notebook textview.view text:backdrop,
+.baul-side-pane notebook viewport.frame:backdrop,
+.baul-side-pane notebook widget .vertical:backdrop {
     background-color: shade(@theme_bg_color, 1.02);
     color: @theme_unfocused_fg_color;
 }
 
-.caja-side-pane treeview.view:selected:backdrop,
-.caja-side-pane treeview.view:selected:hover:backdrop {
+.baul-side-pane treeview.view:selected:backdrop,
+.baul-side-pane treeview.view:selected:hover:backdrop {
     background-color: shade(@backdrop_selected_color, 0.92);
     color: @theme_unfocused_fg_color;
 }
 
 /* treeview rows */
-.caja-side-pane treeview.view {
+.baul-side-pane treeview.view {
     padding: 2px 0px;
 }
 
 /* to avoid overlap with eject buttons */
-.caja-side-pane scrolledwindow scrollbar.vertical.left.overlay-indicator,
-.caja-side-pane scrolledwindow scrollbar.vertical.left.overlay-indicator trough,
-.caja-side-pane scrolledwindow scrollbar.vertical.left.overlay-indicator slider,
-.caja-side-pane scrolledwindow scrollbar.vertical.left.overlay-indicator button {
+.baul-side-pane scrolledwindow scrollbar.vertical.left.overlay-indicator,
+.baul-side-pane scrolledwindow scrollbar.vertical.left.overlay-indicator trough,
+.baul-side-pane scrolledwindow scrollbar.vertical.left.overlay-indicator slider,
+.baul-side-pane scrolledwindow scrollbar.vertical.left.overlay-indicator button {
     min-width: 8px;
 }
 
 /* view modes */
 /* icon and compat mode */
-.caja-navigation-window .caja-notebook scrolledwindow.view.frame  {
+.baul-navigation-window .baul-notebook scrolledwindow.view.frame  {
     background-color: @theme_base_color;
 }
 
 /* color of selected icons if unfocused */
 /* For some reasons this needs to be set here again */
-.caja-navigation-window .caja-notebook .view:active {
+.baul-navigation-window .baul-notebook .view:active {
     background-color: shade(@backdrop_selected_color, 1.00);
 }
 
 /* listview mode */
-.caja-navigation-window .caja-notebook .view {
+.baul-navigation-window .baul-notebook .view {
     background-color: @theme_base_color;
 }
 
 /* rows and header in listview */
-.caja-notebook treeview.view header button {
+.baul-notebook treeview.view header button {
     border-width: 1px 1px 1px 0px;
 }
 
 /* background-image is needed for inactiv-pane. bg color don't work here */
-.caja-notebook treeview.view:selected,
-.caja-notebook treeview.view:selected:hover {
+.baul-notebook treeview.view:selected,
+.baul-notebook treeview.view:selected:hover {
     background-color: @theme_selected_bg_color;
     color: @theme_selected_fg_color;
     background-image: linear-gradient(to bottom,
@@ -210,33 +210,33 @@
                                       shade (@theme_selected_bg_color, 1.00));
 }
 
-.caja-notebook treeview.view:hover {
+.baul-notebook treeview.view:hover {
     background-color: shade (@theme_selected_bg_color, 1.55);
     color: shade (@theme_selected_bg_color, 0.35);
 }
 
 /* unfocused window */
-.caja-navigation-window .caja-notebook scrolledwindow.view.frame:backdrop .view,
-.caja-navigation-window .caja-notebook .view:backdrop {
+.baul-navigation-window .baul-notebook scrolledwindow.view.frame:backdrop .view,
+.baul-navigation-window .baul-notebook .view:backdrop {
     background-color: shade(@backdrop_color, 1.00);
     color: @theme_unfocused_fg_color;
 }
 
-.caja-navigation-window .caja-notebook scrolledwindow.view.frame:backdrop .view:selected,
-.caja-navigation-window .caja-notebook .view:selected:backdrop {
+.baul-navigation-window .baul-notebook scrolledwindow.view.frame:backdrop .view:selected,
+.baul-navigation-window .baul-notebook .view:selected:backdrop {
     background-color: shade(@backdrop_selected_color, 1.00);
     color: @theme_unfocused_fg_color;
 }
 
-.caja-navigation-window .caja-notebook treeview.view:selected:backdrop,
-.caja-navigation-window .caja-notebook treeview.view:selected:hover:backdrop {
+.baul-navigation-window .baul-notebook treeview.view:selected:backdrop,
+.baul-navigation-window .baul-notebook treeview.view:selected:hover:backdrop {
     background-image: linear-gradient(to bottom,
                                       shade (@backdrop_selected_color, 1.00),
                                       shade (@backdrop_selected_color, 1.00));
 }
 
-.caja-desktop.view .entry:backdrop,
-.caja-navigation-window .view .entry:backdrop {
+.baul-desktop.view .entry:backdrop,
+.baul-navigation-window .view .entry:backdrop {
     background-image: linear-gradient(to bottom,
                                       shade (@backdrop_selected_color, 1.02),
                                       shade (@backdrop_color, 1.02));
@@ -244,30 +244,30 @@
     border-color: shade (@backdrop_selected_color, 0.85);
 }
 
-/* ie. inactive-pane caja */
-.caja-notebook .view:disabled {
+/* ie. inactive-pane baul */
+.baul-notebook .view:disabled {
     background-color: @inactive-pane_bg_color;
 }
 
 /* no double borders if tabs are used */
-.caja-navigation-window .caja-notebook > header.top {
+.baul-navigation-window .baul-notebook > header.top {
 	border-width: 1px 0px 0px 1px;
 }
 
 /* window and desktop mode */
-.caja-canvas-item {
+.baul-canvas-item {
     border-radius: 3px;
     color: @theme_fg_color;
 }
 
-.caja-desktop.caja-canvas-item:selected,
-.caja-navigation-window .caja-canvas-item:selected {
+.baul-desktop.baul-canvas-item:selected,
+.baul-navigation-window .baul-canvas-item:selected {
     color: @theme_selected_fg_color;
     background-color: @theme_selected_bg_color;
 }
 
 /* window mode, for some reason this needs to be set again here */
-.caja-navigation-window .caja-notebook scrolledwindow.view.frame .rubberband {
+.baul-navigation-window .baul-notebook scrolledwindow.view.frame .rubberband {
 	background-color: alpha (@theme_selected_bg_color, 0.35);
 	border-color: @theme_selected_bg_color;
 	border-style: solid;
@@ -276,37 +276,37 @@
 }
 
 /* desktop mode */
-.caja-desktop.caja-canvas-item {
+.baul-desktop.baul-canvas-item {
     color: @theme_base_color;
     text-shadow: 1px 1px alpha (#000000, 0.8);
 }
 
-.caja-desktop.caja-canvas-item:selected,
-.caja-desktop.caja-canvas-item:active,
-.caja-desktop.caja-canvas-item:hover {
+.baul-desktop.baul-canvas-item:selected,
+.baul-desktop.baul-canvas-item:active,
+.baul-desktop.baul-canvas-item:hover {
     text-shadow: none;
 }
 
-.caja-desktop EelEditableLabel.entry {
+.baul-desktop EelEditableLabel.entry {
    border-image: none;
    border-width: 1px;
    text-shadow: none;
 }
 
-.caja-desktop.caja-canvas-item:active,
-.caja-desktop.view:selected:backdrop {
+.baul-desktop.baul-canvas-item:active,
+.baul-desktop.view:selected:backdrop {
     background-color: shade(@backdrop_selected_color, 0.75);
     color: @theme_unfocused_fg_color;
 }
 
 /* search, etc */
 /* needed as this is used for firefox locationbar, to avoid double borders */
-.caja-notebook box.vertical > frame > border {
+.baul-notebook box.vertical > frame > border {
     border-style: solid;
     border-width: 1px 1px 0px 1px;
 }
 
-#caja-extra-view-widget {
+#baul-extra-view-widget {
     background-color: shade (@theme_bg_color, 1.04);
     background-color: @cluebar_color;
     border-bottom-color: shade (@cluebar_color, 0.92);
@@ -318,13 +318,13 @@
 }
 
 /* emblems and background dialog */
-.caja-property-browser > box > box > box > scrolledwindow.frame > viewport.frame {
+.baul-property-browser > box > box > box > scrolledwindow.frame > viewport.frame {
     background-color: shade (@theme_bg_color, 1.08);
 }
 
 /* misc */
 /* do we have this style class? */
-.caja-cluebar-label {
+.baul-cluebar-label {
     font-weight: normal;
     text-shadow: 0 1px shade (@cluebar_color, 1.06);
 }
@@ -1067,7 +1067,7 @@ window.background.maximized.engrampa-window > grid.horizontal > paned.horizontal
 window.background.maximized.atril-window > box.vertical > paned.horizontal > box.vertical > scrolledwindow.frame,
 window.background.lapiz-window > box.vertical > paned.horizontal > paned.vertical > notebook box.vertical > scrolledwindow.frame,
 window.background.maximized.logview-window > box.vertical > paned.horizontal > box.vertical > scrolledwindow.frame,
-window.background.maximized.caja-navigation-window notebook.caja-notebook scrolledwindow.frame {
+window.background.maximized.baul-navigation-window notebook.baul-notebook scrolledwindow.frame {
     border-right-width: 0px;
 }
 
